# Python-Sandbox

./: .gitignore
test_django_project/: pyproject.toml
test_django_project/dj_server/: asgi.py  settings.py  urls.py  wsgi.py
test_django_project/m2m_and_filefield/: admin.py  apps.py  models.py  urls.py  views.py
test_django_project/m2m_and_filefield/migrations/: 0001_initial.py
test_django_project/m2m_change_triggers/: apps.py  models.py  tests.py
test_django_project/m2m_change_triggers/migrations/: 0001_initial.py
test_django_project/related_name_in_child_w_inheritance/: apps.py  models.py
test_django_project/users/: admin.py  models.py
test_django_project/users/migrations/: 0001_initial.py
