[tool.poetry]
name = "test_django_project"
version = "0.1.0"
description = ""
authors = ["Vibhu Agarwal <vibhu4agarwal@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.3"
Pillow = "^8.0.1"
djangorestframework = "^3.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
